--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet." href="stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <nav>
@@ -25,6 +25,6 @@
         <footer>
         
         </footer>
-        <script src="index.pack.js"></script>
+       
     </body>
 </html>
